--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #1e0b2f;
+  color: #ffffff;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  text-align: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  background-image: linear-gradient(90deg, #75f4f4, #29ffc6);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.button {
+    padding: 0.5rem 1rem;
+    background-color: #29ffc6;
+    background-image: linear-gradient(90deg, #75f4f4, #29ffc6);
+    cursor: pointer;
+    color: #2f2e41;
+    border-radius: 0.5rem;
+    margin: 0.5rem;
+}
